<resources>
    <string name="app_name">Bilhete Fácil</string>
    <string name="message_welcome">Welcome to</string>

    <string name="title_new_ticket">New Ticket</string>
    <string name="title_menu_config">Configurations</string>
    <string name="title_menu_about">About</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_login">Login G+</string>

    <!-- Strings related to login -->
    <string name="title_login">Bilhete Fácil</string>
    <string name="label_user_email">E-mail</string>
    <string name="label_user_password">Password</string>
    <string name="button_sign_up">Sign Up</string>
    <string name="button_sign_in">Sign In</string>
    <string name="divider_or">Or</string>
    <string name="progress_authenticate">Authenticating…</string>
    <string name="progress_wait">Wait</string>
    <!-- End related to login -->

    <string name="label_ticket_state">State</string>
    <string name="label_ticket_passenger_type">Passenger Type</string>
    <string name="label_ticket_transport_type">Transport Type</string>
    <string name="label_ticket_line">Line</string>
    <string name="label_ticket_tax_type">Modality</string>
    <string name="message_buyer_ticket_success">Ticket successfully purchased!</string>

    <string name="scan">Scan</string>
    <string name="message_capture_code">Point to the code to scan</string>
    <string name="tab_bus">Bus</string>
    <string name="tab_subway">Subway</string>

    <string name="label_first_name">First name</string>
    <string name="label_last_name">Last name</string>
    <string name="label_cell_phone">Cell Phone</string>
    <string name="label_email">Email</string>
    <string name="label_terms_conditions_agree">I agree to the terms and conditions</string>
    <string name="label_btn_register">Register</string>
    <string name="label_password">Password</string>
    <string name="label_confirm_password">Confirm Password</string>
    <string name="message_register_user_success">User successfully registered!</string>
    <string name="message_error_empty_string">Field cannot be null</string>
    <string name="message_terms_conditions_required">You cannot make the register if they do not accept the terms and conditions.</string>
    <string name="message_different_passwords">The passwords are different</string>
    <string name="label_alias">Alias</string>
    <string name="title_new_user">New User</string>
    <string name="message_marker_ticket">Ticket usage locations</string>
    <string name="label_term">Read Terms</string>
    <string name="tab_OK">OK</string>
    <string name="tab_terms">Lorem ipsum dolor,Lorem ipsum dolor,Lorem ipsum dolor,Lorem ipsum dolor,Lorem ipsum dolor,Lorem ipsum dolor,Lorem ipsum dolor</string>
    <string name="label_terms_conditions">Terms and Conditions</string>

    <string name="enum_passager_child">Child</string>
    <string name="enum_passager_adult">Adult</string>
    <string name="enum_passager_elderly">Elderly</string>
    <string name="enum_tax_unique">Unique</string>
    <string name="enum_tax_hourly">Hourly</string>
    <string name="enum_tax_daily">Daily</string>
    <string name="enum_tax_weekend">Weekend</string>
    <string name="enum_tax_area">Area</string>
    <string name="enum_bus">Bus</string>
    <string name="enum_subway">Subway</string>

</resources>
