<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    tools:context="br.com.cast.ticket.app.TicketActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/txtAlias"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textPersonName"
                android:ems="100"
                android:hint="@string/label_alias" />

        </android.support.design.widget.TextInputLayout>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/states"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_ticket"
            android:focusable="true"
            app:ms_alignLabels="false"
            app:ms_arrowColor="#9E9E9E"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#9E9E9E"
            app:ms_floatingLabelText="@string/label_ticket_state"
            app:ms_hint="@string/label_ticket_state"
            app:ms_multiline="false"/>

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/select_type_passenger"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_ticket"
            app:ms_alignLabels="false"
            app:ms_arrowColor="#9E9E9E"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#9E9E9E"
            app:ms_floatingLabelText="@string/label_ticket_passenger_type"
            app:ms_hint="@string/label_ticket_passenger_type"
            app:ms_multiline="false" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/select_type_transport"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_ticket"
            app:ms_alignLabels="false"
            app:ms_arrowColor="#9E9E9E"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#9E9E9E"
            app:ms_floatingLabelText="@string/label_ticket_transport_type"
            app:ms_hint="@string/label_ticket_transport_type"
            app:ms_multiline="false" />


        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/select_line"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_ticket"
            app:ms_alignLabels="false"
            app:ms_arrowColor="#9E9E9E"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#9E9E9E"
            app:ms_floatingLabelText="@string/label_ticket_line"
            app:ms_hint="@string/label_ticket_line"
            app:ms_multiline="false" />

        <fr.ganfra.materialspinner.MaterialSpinner
            android:id="@+id/select_tax_type"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="@dimen/margin_bottom_ticket"
            app:ms_alignLabels="false"
            app:ms_arrowColor="#9E9E9E"
            app:ms_arrowSize="16dp"
            app:ms_floatingLabelColor="#9E9E9E"
            app:ms_floatingLabelText="@string/label_ticket_tax_type"
            app:ms_hint="@string/label_ticket_tax_type"
            app:ms_multiline="false" />

        <EditText
            android:id="@+id/edtQuantity"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:editable="false"
            android:focusable="false"
            android:gravity="center" />

        <Button
            android:id="@+id/btnPaid"
            style="@style/DefaultButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/button_default_top"
            android:text="PREENCHA OS CAMPOS" />

    </LinearLayout>

</ScrollView>
